# kahoot-py

./: .gitignore  README.md  client_example.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
kahoot/: __init__.py  client.py  constants.py  exceptions.py
kahoot/packets/: __init__.py
kahoot/packets/impl/: login.py  respond.py
kahoot/packets/server/: __init__.py  game_over.py  game_start.py  question_end.py  question_ready.py  question_start.py
kahoot/util/: general.py  logger.py  solver.py
